<resources>
    <string name="app_name" translatable="false">Presenti</string>
    <string name="title_activity_mark_attendance" translatable="false">MarkAttendanceActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="base_url" translatable="false">http://api.presenti.lo-yo.in/api/</string>

    <string name="nextText">Next</string>
    <string name="staffLogintText">Staff Login</string>
    <string name="staffPhoneNumber">Phone Number</string>
    <string name="continueBtn">Continue</string>
    <string name="logAttendance">Log Attendance</string>LogIn
    <string name="logIn">Log In</string>
    <string name="lastInTime">Last IN Time</string>
    <string name="lastOutTime">Last OUT Time</string>
    <string name="logOut">Log Out</string>
    <string name="clickHere">Click here to scan QR</string>
    <string name="remoteLogin">Log Remotely</string>
    <string name="customerName">Customer Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="addNote">Add Note</string>
    <string name="submit">Submit</string>
    <string name="note">Note</string>
    <string name="photo">Photo</string>

    <string name="snackNoteUpdate">Note saved successfully</string>
    <string name="snackNetworkError">Network error. Please check your internet connection.</string>
    <string name="snackCustomerName">Please enter customer name and phone number.</string>
    <string name="snackCustomerphone">Please enter ten digit phone number.</string>
    <string name="snackMobileError">Mobile number may not be registered with us. Please contact admin.</string>
    <string name="snackInvalidEmployee">Invalid employee. Please contact admin.</string>
    <string name="snackInvalidBusiness">Invalid business. Please contact admin.</string>
    <string name="snackOutOFBusiness">You are out of business location range limit.</string>
    <string name="snackLocationError">Can not detect location.Please turn ON your location from settings.</string>
    <string name="snackdistanceError">Error while getting distance from business.</string>
    <string name="snackInvalidUser">Invalid user.</string>
    <string name="snackSuccessful">is Successful</string>
    <string name="snackSimError">Unable to detect phone number. Please make sure SIM is inserted properly.</string>
    <string name="alertCamera">Camera permission needed in order to proceed. Using the camera you can read the barcode for login and logout. You can also do it in system settings for Presenti app.</string>
    <string name="alertLocation">Location permission needed in order to proceed. Location is used to mark your attendance and we can make sure you are in the business premises. You can also do it in system settings for Presenti app.</string>
    <string name="languageSelect">Select Language</string>
    <string name="languageHindi">Hindi</string>
    <string name="languageMarathi">Marathi</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="alert">Alert</string>
    <string name="gpsError">Please turn on location services to continue for login.</string>
    <string name="switchCamera">Switch Camera</string>
    <string name="phone_state_permission">In order to read phone number we will need read phone state permission.Please go in settings and grant the permission for phone and restart the app.</string>
    <string name="phone_state">In order to read phone number we will need read phone state permission.</string>

    <string name="hyperlink"><a href="https://www.presenti.co.in">Contact Us</a></string>
</resources>