<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ScanQRActivity">

    <RelativeLayout
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#75000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/overlay_lang"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="90dp"
            android:src="@drawable/select_language">

        </ImageView>

        <TextView
            android:id="@+id/txt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overlay_lang"
            android:layout_marginTop="-18dp"
            android:paddingLeft="10dp"
            android:text="Click here to select language"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:id="@+id/overlay_logout"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:src="@drawable/select_logout">

        </ImageView>

        <TextView
            android:id="@+id/click_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overlay_logout"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-18dp"
            android:text="Click here to logout"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:id="@+id/overlay_qr"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_below="@+id/click_logout"
            android:layout_alignParentRight="true"
            android:layout_marginTop="55dp"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:src="@drawable/select_qr">

        </ImageView>

        <TextView
            android:id="@+id/txt_scan_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overlay_qr"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-18dp"
            android:text="Click here to scan QR"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:id="@+id/overlay_logremote"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/overlay_qr"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:src="@drawable/select_logremote">

        </ImageView>

        <TextView
            android:id="@+id/txt_logremote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overlay_logremote"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-5dp"
            android:text="Click here to log remotely"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/next_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="18dp"
            android:layout_alignParentRight="true"
            android:text="Next"
            android:textSize="25sp">

        </TextView>


    </RelativeLayout>

    <include
        layout="@layout/top_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </include>

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="MYLOZO TECH PVT LTD"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_header" />

    <TextView
        android:id="@+id/log_attendance"
        style="@style/Theme.textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/logAttendance"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_name" />

    <TextView
        android:id="@+id/user_name"
        style="@style/Theme.textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Hi "
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_attendance" />

    <ImageView
        android:id="@+id/barcode"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/qr_border"
        android:cropToPadding="true"
        android:padding="5dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:srcCompat="@drawable/qr" />

    <TextView
        android:id="@+id/click_here"
        style="@style/Theme.textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickHere"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcode" />

    <Button
        android:id="@+id/remote"
        style="@style/PresentiButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/remoteLogin"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/click_here" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:indeterminateTint="#6db300"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remote">

    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>